fixed the overlapping and overall layout

--- a/app/stylesheets/index.css
+++ b/app/stylesheets/index.css
@@ -34,7 +34,7 @@ section {
     text-align: center;
     padding-bottom: 15%;
     padding-left: 18%;
-    background-color: black;
+    background-color: #73AAE8;
 }
 
 .logo_container {
@@ -202,22 +202,24 @@ section {
 /* ABOUT-ME */
 
 .about-me {
-
+    background-color: #AA9569;
     /* top, transparent red, faked with gradient */
     linear-gradient(
       rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0.4)
     ),
     /* bottom, image */
-    background-color: blue;
     background-size: 100%;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    height: 736px;
+    min-height: 736px;
     padding-top: 100px;
-    padding-bottom: 5%;
+    padding-bottom: 100px;
     width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+    font-size: 30px;
 }
 
 .abouth1 {
@@ -229,6 +231,7 @@ section {
 .about_article {
     padding-left: 10%;
     padding-right: 10%;
+    padding-bottom: 100px;
     font-size: 30px;
 }
 
@@ -243,8 +246,7 @@ section {
 
 /* Projects */
 .projects {
-    background:
-
+    background-color: #1DA3EE;
     /* top, transparent red, faked with gradient */
     linear-gradient(
       rgba(0, 0, 0, 0.4),
@@ -255,11 +257,11 @@ section {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    height: 736px;
+    min-height: 736px;
     padding-top: 100px;
     padding-bottom: 5%;
-    color: white;
     width: 100%;
+    color:white;
 }
 
 /* END of Projects */
@@ -267,8 +269,7 @@ section {
 /* Resume */
 
 .resume {
-    background:
-
+    background-color: red;
     /* top, transparent red, faked with gradient */
     linear-gradient(
       rgba(0, 0, 0, 0.4),
@@ -279,7 +280,7 @@ section {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    height: 736px;
+    min-height: 736px;
     padding-top: 100px;
     padding-bottom: 5%;
     color: white;
@@ -288,8 +289,6 @@ section {
 
 /* Contact */
 .contact {
-    background:
-
     /* top, transparent red, faked with gradient */
     linear-gradient(
       rgba(0, 0, 0, 0.4),
@@ -300,9 +299,18 @@ section {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    height: 736px;
+    min-height: 736px;
     padding-top: 100px;
     padding-bottom: 5%;
-    color: white;
     width: 100%;
+}
+
+/* Footer */
+
+footer{
+  color: white;
+  min-height: 100px;
+  padding-top: 40px;
+  text-align: center;
+  background-color: black;
 }
